Customizing marker icon and adding styles from cluster

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
 
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.13.0/antd.min.css"
     />
 
